--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,13 @@ name: Terraform Pipeline
 on:
   push:
     branches:
-      - main  # Executa o workflow quando há push para a branch main
+      - develop  # Executa o workflow quando há push para a branch develop
   pull_request:
     branches:
-      - main  # Executa o workflow em pull requests para a branch main
+      - develop  # Executa o workflow em pull requests para a branch develop
 
 jobs:
-  terraform:
-    name: Terraform
+  CI:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,6 +25,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
+  CD:
+    runs-on: ubuntu:latest
+    needs: [CI]
+      
+    steps:      
       # Instalar o Terraform
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
