--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Terraform Pipeline
 on:
   push:
     branches:
-      - develop  # Executa o workflow quando há push para a branch develop
+      - main  # Executa o workflow quando há push para a branch main
   pull_request:
     branches:
-      - develop  # Executa o workflow em pull requests para a branch develop
+      - main  # Executa o workflow em pull requests para a branch main
 
 jobs:
   CI:
