--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - main  # Executa o workflow em pull requests para a branch main
 
 jobs:
-  CI:
+  TerraformApply:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,12 +24,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-  CD:
-    runs-on: ubuntu:latest
-    needs: [CI]
-      
-    steps:      
+     
       # Instalar o Terraform
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
